client: more onClick fixes client: fix object markers saving